codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__mention_popup_type_prefixes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› $goog                                                                 "
"                                                                        "
"  Google Calendar          [Plugin] Connect Google Calendar for schedul…"
"  Google Calendar          [Skill] Find availability and plan event cha…"
"  Google Calendar          [App] Look up events and availability        "
"  reports/google-calendar  [Workflow] Prepare a focused workflow report…"
"                                                                        "
"  Press enter to insert or esc to close                                 "
