codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__workflow_alias_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› /jira-summary                                                         "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"  /jira-summary             Jira Summary                                "
"    loading completions...                                              "
