codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__workflow_inline_preview_accepts_tab.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                            "
"› /code-review --report-id 1034 --format summary                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                         100% context left  "
