codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__workflow_inline_preview_dynamic.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5386
expression: terminal.backend()
---
"                                                                            "
"› /code-review --reportId 1034 --format summary                             "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                                            "
"                                                         100% context left  "
