codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__workflow_inline_preview_unique_option.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5375
expression: terminal.backend()
---
"                                                                        "
"› /code-review --assignee <string>                                      "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                     100% context left  "
