codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__workflow_static_option_hint_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› /code-review --a                                                      "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"  /code-review              Code Review                                 "
"    --assignee <string>     Assign a reviewer                           "
"    loading completions...                                              "
